force-app/main/default/objects/Permit__c/Permit__c.object-meta.xml
<CustomObject>
    <description>Camp Apex Advent of Salesforce Development. This object is used to help vendors book a booth.</description>
    <label>Permit</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Permit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Permits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>