force-app/main/default/objects/Permit__c/fields/Equipment_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Requirements__c</fullName>
    <label>Equipment Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard (Basic Booth Setup)</fullName>
            </value>
            <value>
                <fullName>Premium (Enhanced Power/Water)</fullName>
            </value>
            <value>
                <fullName>Specialty (Custom Requirements)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>