force-app/main/default/objects/Permit__c/fields/Festival_Booth__c.field-meta.xml
<CustomField>
    <fullName>Festival_Booth__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Festival Booth</label>
    <referenceTo>Booth__c</referenceTo>
    <relationshipLabel>Permits</relationshipLabel>
    <relationshipName>Permits</relationshipName>
    <type>Lookup</type>
</CustomField>