force-app/main/default/objects/Permit__c/fields/Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Date__c</fullName>
    <inlineHelpText>The date that the request was reviewed for approval or rejection</inlineHelpText>
    <label>Review Date</label>
    <type>Date</type>
</CustomField>