force-app/main/default/objects/Permit__c/fields/Space_Required__c.field-meta.xml
<CustomField>
    <fullName>Space_Required__c</fullName>
    <inlineHelpText>The amount of space the Booth will take up at the festival</inlineHelpText>
    <label>Space Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>Extra-Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>