force-app/main/default/objects/Permit__c/fields/Special_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Special_Requirements__c</fullName>
    <inlineHelpText>Note any special requirements here</inlineHelpText>
    <label>Special Requirements</label>
    <type>TextArea</type>
</CustomField>